# Tetris

./: .gitignore  DataStructLib.hpp  README.md  Tetris.cpp  main.cpp  mainAntigo.cpp  tetris.cpp
engine/include/tetris/: Game.hpp
engine/src/: Game.cpp
include/: DataStructLib.hpp  GameField.hpp  Menu.hpp  TetrisGame.hpp  Tetromino.hpp  utils.hpp
include/tetris/: App.hpp  Bag.hpp  Board.hpp  Config.hpp  Game.hpp  Hud.hpp  Renderer.hpp  Tetromino.hpp
src/: App.cpp  Bag.cpp  Board.cpp  Colors.cpp  Config.cpp  Game.cpp  GameField.cpp  Hud.cpp  Menu.cpp  Renderer.cpp  TetrisGame.cpp  Tetromino.cpp  utils.cpp
ui/: CMakeLists.txt
ui/include/tetris/: App.hpp  Config.hpp  Hud.hpp
ui/src/: App.cpp  Hud.cpp
